@startuml
title Entity Relationship Diagram - Part 6 of 6 - Reviews & Ratings
skinparam dpi 180
skinparam linetype ortho
skinparam defaultFontName Arial
skinparam defaultFontSize 15
skinparam classFontSize 17
skinparam classAttributeFontSize 15
skinparam classHeaderFontSize 17
skinparam arrowFontSize 14
skinparam nodesep 50
skinparam ranksep 55
hide circle

entity "users" as users {
  * userId : string <<PK>>
  --
  * email : string
  * userType : string
  fullName : string
}

entity "jobs" as jobs {
  * jobId : string <<PK>>
  --
  * title : string
  * status : string
}

entity "reviews" as reviews {
  * reviewId : string <<PK>>
  --
  * jobId : string <<FK jobs>>
  jobTitle : string
  * clientId : string <<FK users>>
  clientName : string
  clientPhotoUrl : string
  * contractorId : string <<FK users>>
  contractorName : string
  * rating : number
  reviewText : string
  photos : array
  isVerified : boolean
  response : string
  responseDate : bigint
  reviewDate : bigint
}


jobs ||--o| reviews : "rated by"
users ||--o{ reviews : "writes (client)"
users ||--o{ reviews : "receives (contractor)"

@enduml
